@@ -1,2 +1,5 @@
 #include <Ogre.h>
 #include <OgreResourceManager.h>
+
+#define ushort unsigned short 
+#define uint unsigned int 
